# brainfuck

./: .gitattributes  .gitignore  README.md  asset-manifest.json  index.html  run-rust.sh
bfi-haskell/: .gitignore  ChangeLog.md  README.md  bfi-haskell.cabal  package.yaml
bfi-haskell/src/: Lib.hs
bfi-java/src/: Brainfuck.java
bfi-rust/: .gitignore  Cargo.toml  bf.b  perf.data  perf.data.old  sudo
bfi-rust/src/: main.rs
bfi-rust/src/interpreter/: mod.rs  o0.rs  o1.rs  o2.rs  parsed.rs  simple.rs
bfi-rust/src/interpreter/optimized/: mod.rs  patterns.rs
bfi-rust/src/repl/: mod.rs
examples/: gameoflife.bf  quine.bf
ibfi-ts/: README.md  package.json
ibfi-ts/public/: index.html
ibfi-ts/src/: App.scss  App.tsx  presets.json
js/: fizzbuzz.bf  package.json
js/src/: index.js
rust2/: Cargo.toml  rust-toolchain.toml  test.bf
rust2/benches/: opts.rs  twinkle.bf
rust2/src/: codegen.rs  codegen_interpreter.rs  fizzbuzz.bf  ir_interpreter.rs  lib.rs  main.rs  naive_interpreter.rs  opts.rs  parse.rs
rust2/src/hir/: mod.rs  opts.rs
rust2/src/lir/: interpreter.rs  mod.rs
rust2/src/mir/: mod.rs  opts.rs  state.rs
rust2/src/snapshots/: brainfuck__parse__tests__nested_loop.snap  brainfuck__parse__tests__simple.snap  brainfuck__tests__fizzbuzz.snap  brainfuck__tests__mandelbrot.snap  rust2__parse__tests__nested_loop.snap  rust2__parse__tests__simple.snap
static/css/: main.5240792f.chunk.css  main.5240792f.chunk.css.map  main.53e7f6e8.chunk.css  main.53e7f6e8.chunk.css.map  main.9eade52b.chunk.css
static/js/: 2.305014b7.chunk.js  2.a611059c.chunk.js  (+12 more)
(+13 files in other folders)
