[package]
name = "bfinterpreter"
version = "0.1.1"
authors = ["Nilstrieb <nilstrieb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug = true

[profile.dev]
opt-level = 3
