[package]
name = "brainfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.9.1", features = ["allocator_api"] }
clap = { version = "3.1.9", features = ["derive"] }
owo-colors = "3.3.0"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.3.5"
insta = "1.14.0"

[profile.release]
debug = true

[[bench]]
name = "opts"
harness = false
